--- a/plant_shop/templates/accounts/sign-in-page.html
+++ b/plant_shop/templates/accounts/sign-in-page.html
@@ -17,7 +17,7 @@
                 </div>
                 {% if form.errors %}
                     <br>
-                    <div class="ui-state-error">{{ form.errors }}</div>
+                    <div class="ui-state-error">{{ form.non_field_errors }}</div>
                 {% endif %}
                 <br>
 
