--- a/plant_shop/templates/accounts/sign-in-page.html
+++ b/plant_shop/templates/accounts/sign-in-page.html
@@ -2,6 +2,7 @@
 
     <main class="form-signin w-100 m-auto">
         <form method="post" action="{% url 'login-user' %}">
+        {% include 'includes/alerts.html' %}
             <div class="text-center">
                 <img class="mb-4" src="{% static 'images/logo.png' %}" alt="" width="72" height="57">
                 <h1 class="h3 mb-3 fw-normal">Login</h1>
