--- a/plant_shop/templates/contact-us.html
+++ b/plant_shop/templates/contact-us.html
@@ -17,22 +17,19 @@
                             {% csrf_token %}
                             <div class="form-group">
                                 <div class="col-md-9 mx-auto m-3">
-                                    <input id="name" name="name" type="text" placeholder="Your name"
-                                           class="form-control">
+                                    {{ form.name }}
                                 </div>
                             </div>
 
                             <div class="form-group">
                                 <div class="col-md-9 mx-auto m-3">
-                                    <input id="email" name="email" type="text" placeholder="Your email"
-                                           class="form-control">
+                                    {{ form.email }}
                                 </div>
                             </div>
 
                             <div class="form-group">
                                 <div class="col-md-9 mx-auto m-3">
-                                    <textarea class="form-control" name="message"
-                                              placeholder="Please enter your message here..." rows="5"></textarea>
+                                    {{ form.message }}
                                 </div>
                             </div>
 
